[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["isp"]

[project]
name = "isp"
version = "1.1"
dependencies = [
    "open3d==0.17.0",
    "pytorch3d==0.7.7",
    "roma==1.5.0",
    "torch==1.13.1",
    "tqdm==4.64.1",
    "ultralytics==8.0.145",
    "yacs==0.1.8"
]
requires-python = ">=3.7"
authors = [
  {name = "vtrno"},
]

description = "ISP : overengineer camera extrinsic calibration with a human in the frame"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["ICP", "kinect"]
classifiers = [
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/vtrno/isp"
"Bug Tracker" = "https://github.com/vtrno/isp/issues"